Mon Jan  8 15:13:04 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Add some debugging, and fix a test data file.

Mon Jan  8 13:49:50 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix failure to initialise OmMSet::Internal::have_percent_factor.

Thu Jan  4 17:21:24 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Add new test for a postlist with many documents, designed to fail
	  and exhibit the bug andy has found.  So far doesn't fail.

Wed Jan  3 19:30:30 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Add get_percent method to OmMSetIterator.  Untested.

	* Add om_percent type to om_types.

	* Add test of sort order of terms in get_matching_terms.

Tue Jan  2 15:05:53 GMT 2001  Richard Boulton <richard.boulton@open.muscat.com>

	* Move documentation of parameters for OmSettings out of omsettings.h
	  and into docs/.  Not in distribution at the moment: it is awaiting
	  placement into a permanent home (I think the user manual is the
	  correct place).

	* Add a bm25weight_min_normlen parameter: this specifies a cutoff
	  on the minimum value that can be used for a normalised document
	  length: smaller values will be forced up to this cutoff.  This
	  prevents very small documents getting a huge bonus weight.

Wed Dec 20 16:54:41 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix warning in QuartzTable

Wed Dec 20 15:13:05 GMT 2000 Olly Betts

	* OmTermListIterator merged into OmTermIterator.

	* Added OmRSet::contains() - checks if an RSet contains a given
	  docid.

	* Methods returning `const om_termname' now just return
	  `om_termname'.

Tue Dec 19 16:55:02 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented AllTermsIterator for DA and Multi databases.
	  Added a test which actually uses a multidatabase, but
	  disabled it as it currently fails for both Quartz and DA.

Tue Dec 19 12:14:05 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
